--- a/project/style.css
+++ b/project/style.css
@@ -1,6 +1,6 @@
 * {
-	margin: 0;
-	padding: 0;
+  margin:0;
+  padding: 0;
 }
 
 header {
@@ -12,12 +12,18 @@ body {
 }
 
 h1 {
-	padding: 30px 10px 20px 20px;
+	padding: 20px 10px 20px 20px;
+
 }
 
-footer {
-	clear: left;
-	padding: 3% 0 0 5%;
+h3 {
+  padding: 20px 20px 5px 80px;
+}
+
+p {
+	width: 50%;
+  padding: 10px 20px 20px 130px;
+	display: inline-block;
 }
 
 a {
@@ -41,10 +47,4 @@ a:hover {
 /* selected link */
 a:active {
     color: gray;
-}
-
-.columns {
-	float: left;
-	width: 250px;
-	padding: 10px 0px 10px 5%;
 }
