--- a/project/style.css
+++ b/project/style.css
@@ -23,7 +23,7 @@ h3 {
 p {
 	width: 50%;
   padding: 10px 20px 20px 130px;
-	display: inline-block;
+	/*display: inline-block;*/
 }
 
 a {
@@ -50,7 +50,8 @@ a:active {
 }
 
 div.photo {
-	padding-left: 40%;
-	padding-bottom: 5%;
+	padding-left: 15%;
+	padding-bottom: 2%;
+  padding-top: 2%;
 	width: 60%;
 	display: inline-block;
