--- a/studios/studio2/style.css
+++ b/studios/studio2/style.css
@@ -29,7 +29,7 @@ img {
   font-family: 'Quicksand', sans-serif;
   font-weight: 300;
   font-size: 20px;
-  padding: 0px 5px 20px 40px;
+  padding: 0px 5% 5% 10%;
   color: #b12057;
   float: left;
 }
