html validation changes

--- a/studios/studio2/style.css
+++ b/studios/studio2/style.css
@@ -25,7 +25,7 @@ img {
   padding: 90px 5px 5px 10px;
 }
 
-#questions {
+#form-f {
   font-family: 'Quicksand', sans-serif;
   font-weight: 300;
   font-size: 20px;
