--- a/studios/studio3/style.css
+++ b/studios/studio3/style.css
@@ -12,20 +12,44 @@ body{
   margin:55px;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+    position:absolute;
+}
+
+footer {
+  	font-family: 'Helvetica', sans-serif;
+    padding-left: 38%;
+    padding-top: 10px;
+}
+
+a:link {
+  color: darkgray;
+  text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+  color: black;
+}
+
+/* hoover over link */
+a:hover {
+  color: #f0bb29;
+}
+
+/* selected link */
+a:active {
+  color: gray;
+}
+
 #container {
 	width: 1000px;
 	height: 600px;
 	margin-left: auto;
 	margin-right: auto;
 
-}
-
-img {
-    max-width: 100%;
-    max-height: 100%;
-    position:absolute;
-    /*height:100%;*/
-    /*width:auto;*/
 }
 
 .row1 {
@@ -37,7 +61,7 @@ img {
 .text {
 	vertical-align:middle;
 	height:100%;
-	text-align: center;
+	text-align: left;
 	margin-top:20%;
 	font-family: 'Helvetica', sans-serif;
 	/*display: inline-block;*/
@@ -51,8 +75,7 @@ img {
 	margin-right: 15px;
 	margin-top: 15px;
 	margin-bottom: 15px;
-	/*text-align: center;*/
-	/*background: #a2b31d;*/
+  font-family: 'Helvetica', sans-serif;
 }
 
 .row2 {
