--- a/studios/studio3/style.css
+++ b/studios/studio3/style.css
@@ -25,7 +25,7 @@ footer {
 }
 
 a:link {
-  color: darkgray;
+  color: black;
   text-decoration: none;
 }
 
@@ -41,7 +41,7 @@ a:hover {
 
 /* selected link */
 a:active {
-  color: gray;
+  color: black;
 }
 
 #container {
