--- a/studios/studio4/style.css
+++ b/studios/studio4/style.css
@@ -12,6 +12,11 @@ body{
   margin:55px;
 }
 
+h1 {
+  font-family: Helvetica;
+  padding-bottom: 40px;
+}
+
 #container {
 	width: 1000px;
 	height: 600px;
@@ -19,24 +24,53 @@ body{
 	margin-right: auto;
 
 }
-
 img {
     max-width: 100%;
     max-height: 100%;
     position:absolute;
     /*height:100%;*/
     /*width:auto;*/
+  }
 
 #tip {
     position: absolute;
-    left: 330px;
-    top: 85px;
+    left: 400px;
+    top: 145px;
     padding: 10px;
-    width: 200px;
+    width: 350px;
     border-radius: 2px;
+    font-family: helvetica;
     font-size: 15px;
     color: #000;
-    background-color: #f4aa10;
+    background-color: #f9e2ea;
+    opacity: 0;
+    transition: all 1s;
+}
+#tip2 {
+    position: absolute;
+    left: 400px;
+    top: 145px;
+    padding: 10px;
+    width: 350px;
+    border-radius: 2px;
+    font-family: helvetica;
+    font-size: 15px;
+    color: #000;
+    background-color: #fef5e9;
+    opacity: 0;
+    transition: all 1s;
+}
+#tip3 {
+    position: absolute;
+    left: 400px;
+    top: 145px;
+    padding: 10px;
+    width: 350px;
+    border-radius: 2px;
+    font-family: helvetica;
+    font-size: 15px;
+    color: #000;
+    background-color: #d5eef9;
     opacity: 0;
     transition: all 1s;
 }
@@ -68,6 +102,4 @@ a:hover {
 /* selected link */
 a:active {
   color: gray;
-}
-
 }
