--- a/project/proto3/css/style.css
+++ b/project/proto3/css/style.css
@@ -1,12 +1,3 @@
-/*
-  Theme Name: Imperial
-  Theme URL: https://bootstrapmade.com/imperial-free-onepage-bootstrap-template/
-  Author: BootstrapMade
-  Author URL: https://bootstrapmade.com
-*/
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   background: #fff;
   color: #666666;
@@ -177,9 +168,7 @@ h1, h2, h3, h4, h5, h6 {
   border: 2px solid #03C4EB;
 }
 
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
+/*Header*/
 #header {
   background: #111;
   padding: 20px 0;
@@ -227,9 +216,7 @@ h1, h2, h3, h4, h5, h6 {
   background: rgba(0, 0, 0, 0.85);
 }
 
-/*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
+/*Navigation Menu*/
 /* Nav Menu Essentials */
 .nav-menu, .nav-menu * {
   margin: 0;
@@ -450,9 +437,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: #fff;
 }
 
-/*--------------------------------------------------------------
-# Sections
---------------------------------------------------------------*/
+/* Sections*/
 /* Sections Common
 --------------------------------*/
 .section-title {
@@ -476,8 +461,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 20px;
 }
 
-/* Get Started Section
---------------------------------*/
+/* Get Started Section*/
 #about {
   background: #fff;
   padding: 80px 0;
@@ -505,8 +489,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 0;
 }
 
-/* Services Section
---------------------------------*/
+/* Services Section*/
 #services {
   background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("../img/services-bg.jpg") fixed center center;
   background-size: cover;
@@ -555,8 +538,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   line-height: 24px;
 }
 
-/* Subscribe Section
---------------------------------*/
+/* Subscribe Section*/
 #subscribe {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/subscribe-bg.jpg) fixed center center;
   background-size: cover;
@@ -598,8 +580,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   border: 2px solid #03C4EB;
 }
 
-/* map Section
---------------------------------*/
+/* map Section*/
 #map {
   background: #fff;
   padding: 80px 0;
@@ -663,8 +644,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   transform: translate3d(0, 0, 0);
 }
 
-/* Testimonials Section
---------------------------------*/
+/* Testimonials Section*/
 #testimonials {
   background: #f6f6f6;
   padding: 80px 0;
@@ -843,9 +823,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: #25d8fc;
 }
 
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
+/*Footer*/
 #footer {
   background: #111;
   padding: 30px 0;
